--- a/nfl_scrapr.ipynb
+++ b/nfl_scrapr.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1DEBqYMn84R6rMbDvxcOFqpm9DM2Myxoe",
-      "authorship_tag": "ABX9TyMN/RMxvEQaRd8boqGnD1Jz",
+      "authorship_tag": "ABX9TyO9FfDzYWHFAxv35lnuisw6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "id": "sN0w61L0pa2Q"
       },
       "source": [
-        "# !apt install subversion --quiet"
+        "!apt install subversion --quiet"
       ],
       "execution_count": null,
       "outputs": []
@@ -48,7 +48,7 @@
       "source": [
         "!pip install fuzzywuzzy --quiet"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nu-MfQlHpoRn",
-        "outputId": "a063df38-15ec-4e0a-b488-b14ffd63207e"
+        "outputId": "df928213-bc8c-4f66-8ecf-7dfe1ee09500"
       },
       "source": [
         "import os\n",
@@ -70,7 +70,7 @@
         "\n",
         "from fuzzywuzzy import process"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,37 +90,49 @@
       "source": [
         "# fetches and updates the pbp data from github.\n",
         "\n",
-        "# !svn export https://github.com/guga31bb/nflfastR-data/trunk/data/play_by_play_2021.parquet \"/content/drive/My Drive/nflfastR-data/data\" --force --quiet"
+        "!svn export https://github.com/guga31bb/nflfastR-data/trunk/data/play_by_play_2021.parquet \"/content/drive/My Drive/nflfastR-data/data\" --force --quiet"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bI_dkD_JqY95"
+        "id": "bI_dkD_JqY95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "faef10fc-1e07-4953-858d-77750e5532fe"
       },
       "source": [
         " # use this cell to download the latest files\n",
         "\n",
-        "# nflfastr_dir = '/content/drive/My Drive/nflfastR-data'\n",
-        "# data_type = '.parquet'\n",
+        "nflfastr_dir = '/content/drive/My Drive/nflfastR-data'\n",
+        "data_type = '.parquet'\n",
         "lee_sharpe = 'https://raw.githubusercontent.com/nflverse/nfldata/master/data/games.csv'\n",
         "\n",
-        "# files_to_load = [f\"{nflfastr_dir}/data/{x}\" for x in os.listdir(f\"{nflfastr_dir}/data\") if x.endswith(data_type)]\n",
+        "files_to_load = [f\"{nflfastr_dir}/data/{x}\" for x in os.listdir(f\"{nflfastr_dir}/data\") if x.endswith(data_type)]\n",
         "\n",
-        "# df = pd.DataFrame()\n",
+        "df = pd.DataFrame()\n",
         "\n",
-        "# for fn in files_to_load:\n",
-        "#   _df = pd.read_parquet(fn)\n",
-        "#   df = df.append(_df,ignore_index=True)\n",
+        "for fn in files_to_load:\n",
+        "  _df = pd.read_parquet(fn)\n",
+        "  df = df.append(_df,ignore_index=True)\n",
         "\n",
-        "# df = df.infer_objects()\n",
-        "# df = df[df['game_id'].notnull()].copy()\n",
-        "# print(df.shape)"
+        "df = df.infer_objects()\n",
+        "df = df[df['game_id'].notnull()].copy()\n",
+        "print(df.shape)"
       ],
-      "execution_count": 36,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1050766, 449)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -134,7 +146,7 @@
         "ls = pd.read_csv(lee_sharpe, usecols=ls_cols)\n",
         "ls = ls.sort_values(by='game_id')"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -145,11 +157,11 @@
       "source": [
         "# use this cell to load the latest pickle - saves time when new files aren't\n",
         "# needed\n",
-        "# df.to_pickle('/content/drive/MyDrive/nflfastR-data/nfl_pbp_sept_10.pkl')\n",
-        "pickle_source = '/content/drive/MyDrive/nflfastR-data/nfl_pbp_sept_10.pkl'\n",
-        "df = pd.read_pickle(pickle_source)"
+        "df.to_pickle('/content/drive/MyDrive/nflfastR-data/nfl_pbp_sept_14.pkl')\n",
+        "# pickle_source = '/content/drive/MyDrive/nflfastR-data/nfl_pbp_sept_13.pkl'\n",
+        "# df = pd.read_pickle(pickle_source)"
       ],
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -160,7 +172,7 @@
       "source": [
         "df.sort_values(by=['game_id', 'qtr', 'game_seconds_remaining'], ascending=[True, True, False], inplace=True)"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -188,7 +200,7 @@
         "df['season'] = [int(x.split('_')[0]) for x in df.game_id]\n",
         "df['season'] = df['season'].astype('category')"
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -218,7 +230,7 @@
         "\n",
         "df['success'] = success"
       ],
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -234,39 +246,8 @@
         "  else:\n",
         "    return row['spread_line'] * -1"
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0LvtSqlIOzLG",
-        "outputId": "62ab659b-2005-4308-bdd4-2ac44a15df08"
-      },
-      "source": [
-        "for x in df.columns:\n",
-        "  if 'receiver' in x:\n",
-        "    print(x)"
-      ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "receiver_player_id\n",
-            "receiver_player_name\n",
-            "lateral_receiver_player_id\n",
-            "lateral_receiver_player_name\n",
-            "receiver\n",
-            "receiver_jersey_number\n",
-            "receiver_id\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -319,7 +300,7 @@
         "\n",
         "  return rec_df"
       ],
-      "execution_count": 53,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -411,6 +392,8 @@
         "\n",
         "  # fixing qb names\n",
         "\n",
+        "  qb_df['player'].replace('Ty.Taylor', 'T.Taylor', inplace=True)\n",
+        "  qb_df['player'].replace('Aa.Rodgers', 'A.Rodgers', inplace=True)\n",
         "  qb_df['player'].replace('Alex Smith', 'A.Smith', inplace=True)\n",
         "  qb_df['player'].replace('Jos.Smith', 'J.Smith', inplace=True)\n",
         "\n",
@@ -427,7 +410,7 @@
         "\n",
         "  return qb_df"
       ],
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -478,7 +461,7 @@
         "  \n",
         "  return run_df"
       ],
-      "execution_count": 29,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -499,7 +482,7 @@
         "\n",
         "  return opp_pass"
       ],
-      "execution_count": 13,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -520,7 +503,7 @@
         "\n",
         "  return opp_rush"
       ],
-      "execution_count": 14,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -554,7 +537,7 @@
         "  \n",
         "  return def_stats"
       ],
-      "execution_count": 15,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -581,7 +564,7 @@
         "\n",
         "  return season_epa_def"
       ],
-      "execution_count": 16,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -602,7 +585,7 @@
         "\n",
         "  return team_pass_yds"
       ],
-      "execution_count": 17,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -623,7 +606,7 @@
         "\n",
         "  return team_rush_yds"
       ],
-      "execution_count": 18,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -651,7 +634,7 @@
         "\n",
         "  return team_scores"
       ],
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -702,7 +685,7 @@
         "\n",
         "  return game_results"
       ],
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -727,7 +710,7 @@
         "\n",
         "  return ref_rev_dict"
       ],
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -779,7 +762,7 @@
         "\n",
         "  return drive_details"
       ],
-      "execution_count": 22,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -798,7 +781,7 @@
         "\n",
         "  return qb_epa_db.reset_index(drop=True)"
       ],
-      "execution_count": 23,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -808,7 +791,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GuDFitXlXUxr",
-        "outputId": "90ca3a28-c87d-4786-a459-a1eccf100142"
+        "outputId": "09791d58-1502-4ffb-de10-2cc5283eb103"
       },
       "source": [
         "# creating tables for rushing, passing, and receiving. merging the rushing\n",
@@ -818,22 +801,22 @@
         "rec_df = get_receiving()\n",
         "qbs = get_qb_pass()\n",
         "\n",
-        "qb_df = qbs.merge(rush_df, how='left', on=['game_id', 'player_id', 'team', 'total_line', 'home_team', 'away_team'])\n",
+        "qb_df = qbs.merge(rush_df, how='left', on=['game_id', 'player', 'player_id', 'team', 'total_line', 'home_team', 'away_team'])\n",
         "qb_df['total_epa'] = qb_df['rush_epa'].add(qb_df['epa'])\n",
         "\n",
         "print(qb_df.shape)\n",
         "print(rec_df.shape)\n",
         "print(rush_df.shape)"
       ],
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(14245, 41)\n",
-            "(90024, 16)\n",
-            "(46273, 17)\n"
+            "(14282, 40)\n",
+            "(90268, 16)\n",
+            "(46398, 17)\n"
           ]
         }
       ]
@@ -853,7 +836,7 @@
         "def_stats = get_def_stats()\n",
         "team_scores = get_team_scores()"
       ],
-      "execution_count": 34,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -864,7 +847,7 @@
       "source": [
         "games_df = get_game_results()"
       ],
-      "execution_count": 39,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -876,7 +859,7 @@
         "ref_rev_dict = create_ref_dict()\n",
         "games_df['referee'] = games_df['referee'].map(ref_rev_dict).fillna(games_df['referee'])"
       ],
-      "execution_count": 40,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -891,7 +874,7 @@
         "                                                                              'pass_attempt' : 'sum',\n",
         "                                                                              'total_plays' : 'sum'})"
       ],
-      "execution_count": 41,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -902,7 +885,7 @@
       "source": [
         "games_df = games_df.merge(drive_summary, how='left', on=['game_id', 'team'])"
       ],
-      "execution_count": 42,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -915,7 +898,7 @@
         "games_df['perc_pass'] = games_df['pass_attempt'].div(games_df['total_plays']).round(3)\n",
         "games_df['sec_per_play'] = games_df['poss_time'].div(games_df['total_plays']).round(1)"
       ],
-      "execution_count": 43,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -965,7 +948,7 @@
         "home_away_qbs = get_home_away_qb()\n",
         "games_df = games_df.merge(home_away_qbs, how='left', on=['game_id'])"
       ],
-      "execution_count": 44,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1010,7 +993,7 @@
         "    .round(2)\n",
         ")"
       ],
-      "execution_count": 45,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1022,7 +1005,7 @@
         "games_df = games_df.merge(off_epa_game, how='left', on=['game_id', 'team'])\n",
         "games_df = games_df.merge(def_epa_game, how='left', on=['game_id', 'team'])"
       ],
-      "execution_count": 46,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1035,7 +1018,7 @@
         "\n",
         "games_df = games_df.merge(def_stats, how='left', on=['game_id', 'team', 'season'])"
       ],
-      "execution_count": 47,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1046,17 +1029,13 @@
       "source": [
         "rolling_qb = get_rolling_qb_epa()"
       ],
-      "execution_count": 48,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dHN8uc9o3VbO",
-        "outputId": "a5e00a8e-8a04-42b4-e693-c2aaa6364975"
+        "id": "dHN8uc9o3VbO"
       },
       "source": [
         "from sqlalchemy import create_engine\n",
@@ -1091,17 +1070,8 @@
         "    conn.commit()\n",
         "    conn.close()"
       ],
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-            "  \"\"\")\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1110,12 +1080,87 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4891cf9b-ffd0-412f-f180-e7971b8d8f7e"
+        "outputId": "b547e829-d361-471d-bd59-e462dc99bcbb"
+      },
+      "source": [
+        "populate_table(qb_df, 'qb_games', URI)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "connected to the database..\n",
+            "creating the cursor..\n",
+            "writing the csv to file..\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qLbxYDHSZmkD",
+        "outputId": "131b98c2-215e-4bd7-896d-a2fb1bdb28bb"
+      },
+      "source": [
+        "populate_table(games_df, 'games', URI)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "connected to the database..\n",
+            "creating the cursor..\n",
+            "writing the csv to file..\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jezWbtEdZup2",
+        "outputId": "0362f8e7-9f94-465e-e665-d05206178b00"
+      },
+      "source": [
+        "populate_table(rec_df, 'receiving_games', URI)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "connected to the database..\n",
+            "creating the cursor..\n",
+            "writing the csv to file..\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ECFAikvzZ2gz",
+        "outputId": "0e864f30-3a83-4265-f471-1b82682d4b7a"
       },
       "source": [
         "populate_table(rush_df, 'rush_games', URI)"
       ],
-      "execution_count": 52,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
